// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check defaultCursor prop 1`] = `
<DocumentFragment>
  <div
    class="container touchActionNone w100 h100"
  >
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide2"
        >
          slide2
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide3"
        >
          slide3
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(100%, 0%, 0);"
    />
  </div>
</DocumentFragment>
`;

exports[`check infinite switching move from cursor 100 to cursor 101 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check infinite switching move from cursor 101 to cursor 102 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 0 to cursor 1 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,15 +2,25 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
-     />
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+     >
+       <div
+         class="childWrapper w100 h100"
+       >
+         <div
+           data-testid="slide3"
+         >
+           slide3
+         </div>
+       </div>
+     </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -20,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 1 to cursor 0 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,19 +30,9 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
-     >
-       <div
-         class="childWrapper w100 h100"
-       >
-         <div
-           data-testid="slide3"
-         >
-           slide3
-         </div>
-       </div>
-     </div>
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+     />
    </div>
  </DocumentFragment>
`;

exports[`check slides switching using cursor prop move from cursor 1 to cursor 2 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,25 +2,15 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
-     >
-       <div
-         class="childWrapper w100 h100"
-       >
-         <div
-           data-testid="slide1"
-         >
-           slide1
-         </div>
-       </div>
-     </div>
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+     />
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +20,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 2 to cursor 1 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionNone w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,9 +30,19 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
-     />
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+     >
+       <div
+         class="childWrapper w100 h100"
+       >
+         <div
+           data-testid="slide1"
+         >
+           slide1
+         </div>
+       </div>
+     </div>
    </div>
  </DocumentFragment>
`;
